fix: site search color contrast + code refactoring

--- a/src/theme/ItaliaTheme/Components/_search.scss
+++ b/src/theme/ItaliaTheme/Components/_search.scss
@@ -8,5 +8,6 @@
     box-shadow: 0 0 0 2px var(--focus-outline-color) !important;
     outline: none !important;
     background-color: #0062e2;
+    color: #fff;
   }
 }
